--- a/.env
+++ b/.env
@@ -6,7 +6,7 @@ APP_URL=http://localhost
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=s22
+DB_DATABASE=domain_manager
 DB_USERNAME=root
 DB_PASSWORD=
 
